syntax = "proto3";
//命名规范 packge_name.version
package book.v1;
option go_package = "pb/book";
import "google/protobuf/wrappers.proto";

message Book{
  int64 id = 1;
  string name = 2;
}
enum Status{
  SUCCESS = 0;
  FAILED = 1;
  DEAD = 2;
}


message BookRequest{
  int64 id = 1;
  optional google.protobuf.StringValue name = 2;
}

message BookResponse{
  repeated Book books = 1;
  Status status = 2;
  map<string, Book> bookMap = 3;
}

service BookService{
  rpc getBooks1(BookRequest) returns(BookResponse);
  rpc getBooks2(BookRequest) returns(stream BookResponse);
  rpc getBooks3(stream BookRequest) returns(BookResponse);
  rpc getBooks4(stream BookRequest) returns(stream BookResponse);
}